@@ -409,6 +409,9 @@ pm-wrought-iron=Wrought iron
 pm-mixed-baryte=Mixed baryte
 pm-baryte-ore=Baryte ore
 pm-pure-baryte=Pure baryte
+pm-empty-glass-ampule=Empty glass ampule
+pm-francium-glass-ampule=Francium glass ampule
+pm-caesium-glass-ampule=Casesium glass ampule
 
 automation-science-pack=Transition metal pack
 logistic-science-pack=Advanced transition metal pack
@@ -444,7 +447,7 @@ copper-ore=Copper chunk
 
 pm-acid-plant=Acid plant
 pm-assembling-machine-0=Assembling machine 0
-pm-welder=Welder 
+pm-welder=Welder
 pm-water-extractor=Seawater extractor
 pm-stainless-steel-storage-tank=Stainless steel storage tank
 pm-dirty-boiler=Seawater boiler
@@ -1453,6 +1456,7 @@ pm-research-speed=Research speed
 pm-worker-robot-speed=Worker robot speed
 pm-physical-prpjectile-damage=Physical projectile damage
 pm-weapon-shooting-speed=Weapon shooting speed
+pm-glass-ampules=Glass ampules
 
 pm-ferric-chloride-processing=Ferric chloride processing
 pm-advanced-chlorine-processing=Advanced chlorine processing
@@ -1610,6 +1614,7 @@ pm-advanced-nickel-processing=Unlocks more advanced ways to create metallic nick
 pm-advanced-zinc-processing=Unlocks more advanced ways to create metallic zinc.
 pm-octane-fuel-canisters=More advanced fuel production by using more advanced hydrocarbons.
 pm-stronger-beacon-distribution=Slight rewrites of the microcode in beacons allows for stronger distribution effectiveness.
+pm-glass-ampules=A way to store dangerous elements, for transportation. Can be re-used nearly an infinite amount of times.
 
 pm-ferric-chloride-processing=A compound of a ferrous metal and chlorine, used in cleaning waste water or acidic processes.
 pm-advanced-chlorine-processing=A more sophisticated way of making Hydrochloric acid, while using.. no chlorine.
