@@ -135,6 +135,7 @@ Date: 2024-12-08
     - Made the posion effect slightly slow enemies.
     - Changed projectile damage to be a P-TM bonus, and not a RNM bonus.
     - Doubled the amount of glass needed for normal module lights.
+    - Changed francium and caesium to be required to be transported in glass ampules, instead of being in pipes. It was funny, but the time hath passed.
 
   Fixes:
     - Fixed the science pack item names captilisation.
